force-app/main/default/objects/ddcAssess__Field_Assessment__c/fields/ddcAssess__Unmatched_Blank_pcnt__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Unmatched_Blank_pcnt__c</fullName>
    <formula>IF(ddcAssess__Entity_Assessment__r.ddcAssess__Unmatched__c &gt; 0, ddcAssess__Unmatched_Blank__c /  ddcAssess__Entity_Assessment__r.ddcAssess__Unmatched__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unmatched Blank %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>